--- a/src/app/exemplo11/exemplo11.component.html
+++ b/src/app/exemplo11/exemplo11.component.html
@@ -1,3 +1,6 @@
-<p>
-  exemplo11 works!
-</p>
+<div class="container">
+  <h1 class="text-center">{{title}}</h1>
+  <p>
+    Olhar o saida do console
+  </p>
+</div>
