--- a/src/app/exemplo13/exemplo13.component.html
+++ b/src/app/exemplo13/exemplo13.component.html
@@ -1,3 +1,5 @@
-<p>
-  exemplo13 works!
-</p>
+<div class="container">
+  <h1 class="text-center">{{title}}</h1>
+  Exemplo 13 - Emmiter de Componente - evnio de filho para pai
+</div>
+<app-Pai></app-Pai>
